💄 add align end for xlg screens to ensure better layout

--- a/src/components/Forms/NewsletterForm/NewsletterForm.module.scss
+++ b/src/components/Forms/NewsletterForm/NewsletterForm.module.scss
@@ -5,4 +5,8 @@
   flex-direction: column;
   align-items: center;
   gap: var(--space-xl);
+
+  @include mq(xlg) {
+    align-items: end;
+  }
 }
